--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,16 @@
-<!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+<!DOCTYPE html>
+<html>
+  <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="utf-8">
+    <title>Intro to HTML & CSS</title>
+  </head>
+  <body>
+    <header></header>
+    <div class="left"></div>
+    <div class="right"></div>
+    <div class="large-box"></div>
+    <footer></footer>
+
+  </body>
+</html>
